--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ matrix:
 install:
 - pip install coverage
 - python setup.py install
-#script:
-#- python runtests.py
+script:
+- python runtests.py
 before_deploy:
 - git stash --all
 - sed -i "s/@@version@@/${TRAVIS_TAG}/g" setup.py
