--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
 - pip install coverage
 - python setup.py install
 script:
-- python runtests.py
+- coverage run runtests.py
 before_deploy:
 - git stash --all
 - sed -i "s/@@version@@/${TRAVIS_TAG}/g" setup.py
