--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ matrix:
   - python: '3.7'
   - python: '3.8'
   - python: '3.9'
+
+cache:
+  pip: true
+
 install:
 - pip install coverage
 - python setup.py install
