--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Run install
         run: python setup.py install
 
+      - name: Install coverage
+        run: python -m pip install coverage
+
       - name: Run tests
         run: coverage run runtests.py
 
